--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,5 @@
-server.port: 8081
-
 spring:
-  cache:
-    redis:
-      time-to-live: 100s
-  redis:
-    cluster.nodes:
-      - 10.10.3.51:2001
-      - 10.10.3.51:2002
-      - 10.10.3.51:2003
-    lettuce.pool:
-      max-active: 10
-      max-idle: 10
-
-
-
+  profiles:
+    active: single
+server:
+  port: 8081
